Fix spacing in create baseline modal

--- a/src/App.scss
+++ b/src/App.scss
@@ -351,6 +351,10 @@
   padding-top: 16px;
 }
 
+.md-padding-bottom {
+  padding-bottom: 16px;
+}
+
 .margin-right-5-px {
   margin-right: 5px;
 }
